--- a/templates/quality.html
+++ b/templates/quality.html
@@ -46,27 +46,25 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Quality: About This Data Set</h1>
-        <p>Write a brief summary about the quality of the data set here</a></p>
+        <p>As mentioned in the about page, the dataset includes location and activity data collected as a part of a study by Carnegie Mellon University using AWARE framework.</p>
+        <p>Overall, the dataset is coherent and correct, and slightly incomplete. Check out the sections below for more details.</p>  
       </div>
 
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
-	<p>If not, what is missing and what concerns does it raise?
-	What is your evidence for this?</p>
+	<p>The data was incomplete because it can not collect data when phone ore Aware App gets turned off. </p>
       </div>
       
       <div class="page-header">
 	<h2>Is the data coherent?</h2>
-	<p>Does it make sense relative to itself? Does it match your
-	expectations? Are the distributions sensible? What is your
-	evidence for this?</p>
+	<p>The data is generally coherent. As shown in my analysis in home page, the scatter plots and quantile plot both proofed my assumption about the relationship between phone usage and battery level. </p>
       </div>
 
       <div class="page-header">
 	<h2>Is the data correct?</h2>
-	<p>What aspects of this data can you verify? How did you do so? What did
-	you find?</p>
+	<p>This data is generally correct. As I reported in home page, the reason for not using my phone more often when it's fully charged might because of my activity pattern. So I counted the number of phone usage for each hour in these 23 days. Then I ploted as following. It seems that the number of phone usage for some day is zero from 8 am to 12 pm.  </p>
+          <center><img alt = "usage count" src ="../img/usage_count.png"style="width:500px;height:500px;"/></center>
       </div>
 
     </div> <!-- /container -->
