--- a/templates/quality.html
+++ b/templates/quality.html
@@ -53,7 +53,7 @@
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
-	<p>The data was incomplete because it can not collect data when phone ore Aware App gets turned off. </p>
+	<p>The data was incomplete because it can not collect data when phone or Aware App gets turned off. </p>
       </div>
       
       <div class="page-header">
