--- a/templates/quality.html
+++ b/templates/quality.html
@@ -46,24 +46,29 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
 	<h1>Quality: About This Data Set</h1>
-        <p>As mentioned in the about page, the dataset includes location and activity data collected as a part of a study by Carnegie Mellon University using AWARE framework.</p>
-        <p>Overall, the dataset is coherent and correct, and slightly incomplete. Check out the sections below for more details.</p>  
+        <p>As mentioned in the about page, the dataset includes battery and location data collected as a part of a study by Carnegie Mellon University using AWARE framework software.</p>
+        <p>Overall, the dataset is coherent and correct, with a little incomplete. For detailed explaination please see the following.</p>  
       </div>
 
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
-	<p>The data was incomplete because it can not collect data when phone or Aware App gets turned off. </p>
+	<p>The data was incomplete because it can not collect data when phone or Aware App gets turned off. As you can see in following histagram, out of 2286 data points in device usage dataset, there are 1144 of them have zero device on time. This affects the my analysis from home page because this would introduce bias when analyzing phone usage of this dataset.
+          </p>
+          <center><img alt = "completeness of device usage" src = "../img/completeness_usagedata.png"</center>
       </div>
       
       <div class="page-header">
 	<h2>Is the data coherent?</h2>
-	<p>The data is generally coherent. As shown in my analysis in home page, the scatter plots and quantile plot both proofed my assumption about the relationship between phone usage and battery level. </p>
+	<p>Overall, this data is generally coherent. As shown in my analysis in home page, the scatter plots and quantile plot both proofed my assumption about the relationship between phone usage and battery level. Please see detailed analysis in home page.</p>
+              <center><img alt="Battery_vs_Usage_scatterplot" src="../img/battery_usage.png"/></center>
+            <center><img alt = "Quantile_Usage" src = "../img/quantile_usage.png"/></center>
+
       </div>
 
       <div class="page-header">
 	<h2>Is the data correct?</h2>
-	<p>This data is generally correct. As I reported in home page, the reason for not using my phone more often when it's fully charged might because of my activity pattern. So I counted the number of phone usage for each hour in these 23 days. Then I ploted as following. It seems that the number of phone usage for some day is zero from 8 am to 12 pm.  </p>
+	<p>This data is generally correct. As I stated in home page, the reason for not using my phone more often when it's fully charged might because of my activity pattern. So I counted the number of phone usage for each hour in these 23 days. Then I ploted as following. It seems that the number of phone usage for some day is zero from 8 am to 12 pm.  </p>
           <center><img alt = "usage count" src ="../img/usage_count.png"style="width:500px;height:500px;"/></center>
       </div>
 
