--- a/templates/quality.html
+++ b/templates/quality.html
@@ -53,7 +53,7 @@
     
       <div class="page-header">
 	<h2>Is the data complete?</h2>
-	<p>The data was incomplete because it can not collect data when phone or Aware App gets turned off. As you can see in following histagram, out of 2286 data points in device usage dataset, there are 1144 of them have zero device on time. This affects the my analysis from home page because this would introduce bias when analyzing phone usage of this dataset.
+	<p>The data was incomplete because it can not collect data when phone or Aware App gets turned off. As you can see in following histagram demonstrating the common values in device usage dataset, out of 2286 data points, there are 1144 of them have zero device on time. This affects the my analysis from home page because this would introduce bias when analyzing phone usage of this dataset.
           </p>
           <center><img alt = "completeness of device usage" src = "../img/completeness_usagedata.png"</center>
       </div>
@@ -68,7 +68,7 @@
 
       <div class="page-header">
 	<h2>Is the data correct?</h2>
-	<p>This data is generally correct. As I stated in home page, the reason for not using my phone more often when it's fully charged might because of my activity pattern. So I counted the number of phone usage for each hour in these 23 days. Then I ploted as following. It seems that the number of phone usage for some day is zero from 8 am to 12 pm.  </p>
+	<p>This data is generally correct. As I stated in home page, the reason for not using my phone more often when it's fully charged might because of my activity pattern. So I counted the number of phone usage for each hour in these 23 days. For demonstration, I ploted counted phone usage for only Monday as following. It seems that the number of phone usage for some day of the week is zero from 8 am to 12 pm. This is usally my class period, so I tend to not use my phone during those time.  </p>
           <center><img alt = "usage count" src ="../img/usage_count.png"style="width:500px;height:500px;"/></center>
       </div>
 
